styles/components/signup.scss
.sign-page {
  display: flex;
  min-height: 100%;
  max-height: 100%;
  justify-content: center;
  align-items: center;
}
.sign-form {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 12px;
  & > :last-child {
    margin-top: 32px;
  }
}
.signup-back {
  cursor: pointer;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  border: 1px solid #e7e7e9;
  display: flex;
  justify-content: center;
  align-items: center;
  align-self: flex-start;
}
.sign-container {
  width: 100%;
  max-width: 400px;
  min-width: 250px;
  display: flex;
  // border-radius: 8px;
  // background-color: color("white");
  flex-direction: column;
  gap: 10px;
  padding: 16px 24px;
  box-sizing: border-box;
  align-items: center;
  & > .sign {
    &__title {
      @include typeface("Heading_1");
      font-weight: 800;
      margin-bottom: 32px;
      align-self: flex-start;
    }

    &__auth-link {
      padding: 20px 0;
      display: flex;
      gap: 3px;
      @include typeface("Paragraph_2");
      color: color("grey_666");
      & > a {
        text-decoration: underline;
      }
    }
    &__result {
      width: 100%;
      height: 48px;
      display: flex;
      justify-content: center;
      align-items: center;
      border-radius: 12px;
      &.success {
        // background-color: color('');
        height: 100px;
        gap: 20px;
        @include typeface("Heading_1");
      }
      &.failed {
        color: color("white");
        background-color: color("notice");
        @include typeface("Paragraph_2");
      }
    }
  }
  & > .bar {
    width: 100%;
    height: 1px;
    border: none;
    border-bottom: 1.5px solid #e7e7e9;
    overflow: visible;
    margin: 20px 0;
    &::after {
      position: relative;
      content: "or";
      display: inline-block;
      padding: 0 14px;
      top: -8px;
      left: 50%;
      z-index: 1;
      transform: translate(-50%, 0);
      background-color: color("white");
      color: color("grey_bbb");
    }
  }
}

